fixed iOS layout issues - closes #130

--- a/angular/app/landing/landing.less
+++ b/angular/app/landing/landing.less
@@ -208,8 +208,7 @@ Make sure to remove this when you modify this demo
 @media only screen and (max-width : 950px) {
     .iOS-hack .flex-100,
     .iOS-hack .flex-50,
-    .iOS-hack .flex-33,
-    {
+    .iOS-hack .flex-33{
         flex: none !important;
     }
 }
